...
          },
          verticalArrangement = Arrangement.spacedBy(16.dp),
          horizontalAlignment = Alignment.CenterHorizontally
        ) {
          Image(
            painter = painterResource(resource = Res.drawable.mahasangh_logo_without_background),
            contentDescription = "logo आर्य महासंघ",
            modifier = Modifier.size(128.dp)
          )
          Text(
            modifier = Modifier
              .semantics { contentDescription = "about_intro_paragraph" }
              .testTag("about_intro_paragraph"),
            text = uiState.organisation?.description
              ?: "सनातन धर्म का साक्षात् प्रतिनिधि 'आर्य' ही होता है। आर्य ही धर्म को जीता है, समाज को मर्यादाओं में बांधता है और राष्ट्र को सम्पूर्ण भू-मण्डल में प्रतिष्ठित करता है। आर्य के जीवन में अनेकता नहीं एकता रहती है अर्थात् एक ईश्वर, एक धर्म, एक धर्मग्रन्थ और एक उपासना पद्धति। ऐसे आर्यजन लाखों की संख्या में मिलकर संगठित, सुव्यवस्थित और सुनियोजित रीति से आगे बढ़ रहे हैं - आर्यावर्त की ओर--
          )
        }
      }
...
